--- a/GuestRegistrationDeskUI/Views/MainScreenView.xaml
+++ b/GuestRegistrationDeskUI/Views/MainScreenView.xaml
@@ -8,11 +8,13 @@
              xmlns:local="clr-namespace:GuestRegistrationDeskUI.Views"
              mc:Ignorable="d" Background="White" FontSize="12" 
              
-             Height="auto" Width="auto"  >
+             Height="auto" Width="auto" >
 
     <Grid MinHeight="1400" Margin="0,0,10,10" Background="CadetBlue" >
 
-        <TabControl TabStripPlacement="Left" Margin="0,-2,0,422" Padding="0 0 0 0" FontSize="18" FontWeight="Bold" SelectionChanged="TabControl_SelectionChanged_2" Background="CadetBlue">
+        <TabControl TabStripPlacement="Left" Margin="0,-2,0,422" Padding="0 0 0 0" FontSize="18" FontWeight="Bold" SelectionChanged="TabControl_SelectionChanged_2" Background="CadetBlue" BorderThickness="0">
+         
+
             <TabItem Name="ScanIdDocuments" Header="Scan" HorizontalContentAlignment="Center" Padding="25 50 50 25">
                 <TabItem.Content>
                     <Grid Margin="0,0,520.4,431">
@@ -104,8 +106,9 @@
 
             <TabItem Name="VisitorDetails" Header="Additional Details" Padding="25 50 50 25" Margin="0 0 0 0" VerticalAlignment="Center">
 
-                <TabControl TabStripPlacement="Top" Margin="-2,17,239.4,-284" Padding="0 0 0 0" FontSize="14" Height="1188" VerticalAlignment="Top" SelectionChanged="TabControl_SelectionChanged" RenderTransformOrigin="0.504,0.676" Background="CadetBlue">
+                <TabControl TabStripPlacement="Top" Margin="-2,17,239.4,-284" Padding="0 0 0 0" FontSize="14" Height="1188" VerticalAlignment="Top" SelectionChanged="TabControl_SelectionChanged" RenderTransformOrigin="0.504,0.676" Background="CadetBlue" BorderThickness="0" >
 
+                  
                     <TabItem Name="ConsultantApplicationForm" Width="250" Header="Consultant Application Form">
                         <TabItem.Content>
                             <Grid >
@@ -213,6 +216,7 @@
                         </TabItem.Content>
                     </TabItem>
                     <TabItem Name="ConfidentialityAgreementForVisitor" Width="250" Header="Confidentiality Agreement">
+                        
                         <TabItem.Content>
 
                             <Grid>
